# typeclasses-projects

./: LICENSE.txt  README.md
backpack-prelude/: .gitignore  Demo.hs  GPL-3.txt  README.md  backpack-prelude.cabal  default.nix  repl-using-nix.sh
clock-fltkhs/: .ghci  .gitignore  LICENSE  README.md  Setup.hs  package.yaml  stack-dev.yaml  stack-windows.yaml  stack.yaml
clock-fltkhs/app/: Main.hs
clock-gtk3/: Main.hs  README.md  default.nix  nix-ghci.sh  nix-ghcid.sh  nix-run.sh  nixpkgs.nix
nixos-on-aws/: README.md  build.hs  configuration.nix  deploy.hs  server.nix
turkey/: run.sh  turkey.hs
